--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Welcome to Git, bro!</title>
+  <title>Welcome to Git!</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
   <div class="box">
-    <h1>Поздравляю!</h1>
+    <h1>Congratulations!</h1>
     <p>Вы только что успешно склонировали Git репозиторий с сервера на жесткий диск своего компьютера. Давайте отпразднуем это, и посмотрим несколько секунд на фото этих замечательных животных.</p>
   </div>
 
