--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="box">
     <h1>Congratulations!</h1>
     <p>Вы только что успешно склонировали Git репозиторий с сервера на жесткий диск своего компьютера. Давайте отпразднуем это, и посмотрим несколько секунд на фото этих замечательных животных.</p>
+    <p>Good luck!</p>
   </div>
 
   <div class="photo">
