--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <p>Вы только что успешно склонировали Git репозиторий с сервера на жесткий диск своего компьютера. Давайте отпразднуем это, и посмотрим несколько секунд на фото этих замечательных животных.</p>
     <p>Good luck!</p>
   </div>
+  <aside>
+    <h1>sidebar</h1>
+  </aside>
 
   <div class="photo">
     <img src="images/dog.jpg" alt="A cute dog.">
