--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   </div>
   <aside>
     <h1>sidebar</h1>
+    <ul>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+    </ul>
   </aside>
 
   <div class="photo">
